# Sandile-Blockchain-Based-Energy-Optimization

./: Cargo.toml  README.md  dfx.json  generate_did.sh  package-lock.json  package.json
src/Sandile_backend/: Cargo.toml  Sandile_backend.did
src/Sandile_backend/src/: lib.rs
src/Sandile_frontend/: index.html  package.json  tailwind.config.js
src/Sandile_frontend/public/images/: background-placeholder.jpg:Zone.Identifier  background-placeholder2.jpg:Zone.Identifier  bplogo.jpg:Zone.Identifier  carbon_reduction.jpg:Zone.Identifier  cost_saving.jpg:Zone.Identifier  current_usage.jpg:Zone.Identifier  efficiency_growth.jpg:Zone.Identifier  enellogo.jpg:Zone.Identifier  energy_saving.jpg:Zone.Identifier  energy_saving.png:Zone.Identifier  gelogo.jpg:Zone.Identifier  households_ready.jpg:Zone.Identifier  icplogo.png:Zone.Identifier  ikealogo.png:Zone.Identifier  schneiderlogo.png:Zone.Identifier  shelllogo.png:Zone.Identifier  siemenslogo.png:Zone.Identifier  step1.jpg:Zone.Identifier  step2.jpg:Zone.Identifier  step3.jpg:Zone.Identifier  step4.jpg:Zone.Identifier  step5.jpg:Zone.Identifier  step6.jpg:Zone.Identifier  step7.jpg:Zone.Identifier  step8.jpg:Zone.Identifier  step9.jpg:Zone.Identifier
src/Sandile_frontend/src/: App.jsx  main.jsx
src/Sandile_frontend/src/components/: EnergyUsageForm.jsx  Footer.jsx  Header.jsx  ICPLogin.jsx  RecommendationList.jsx  SavedRecommendationList.jsx
src/Sandile_frontend/src/components/HomePage/: CallToAction.jsx  CaseStudies.jsx  (+5 more)
src/Sandile_frontend/src/pages/: AnalyzePage.jsx  HomePage.jsx  RecommendationsPage.jsx
